<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <RelativeLayout 
            android:id="@+id/rl_quality_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <SeekBar
                android:id="@+id/sb_quality_bright"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginVertical="4dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_quality_bright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/quality_activity_bright" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_quality_contrast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <SeekBar
                android:id="@+id/sb_quality_contrast"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginVertical="4dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_quality_contrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/quality_activity_contrast" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_quality_saturation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <SeekBar
                android:id="@+id/sb_quality_saturation"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginVertical="4dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_quality_saturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="18dp"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/quality_activity_saturation" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/rl_quality_huen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <SeekBar
                android:id="@+id/sb_quality_huen"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginVertical="4dp"
                android:layout_alignParentRight="true" />


            <TextView
                android:id="@+id/tv_quality_huen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18dp"
                android:text="@string/quality_activity_huen" />
        </RelativeLayout>

</LinearLayout>
